hphp/test/zend/good/Zend/tests/finally_goto_002.php.expectf

Fatal error: 'goto' into finally statement is disallowed in %s/finally_goto_002.php on line 4
